--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://34.91.217.197:8080",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
